--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ html {
   margin: 0 auto;
 }
 
+
 header {
   margin-top: 72px;
 }
@@ -101,18 +102,17 @@ main {
 .scene {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+/*align-items: center;*/
+/*justify-content: center;*/
   height: 100%;
   padding: 48px;
-  text-align: center;
   box-sizing: border-box;
 }
 
 .scene a {
-  width: auto;
+  width: 150px;
   padding: 12px 18px;
-  display: inline-block;
+  display: block;
   background: #26A69A;
   color: #FFFFFF;
   font-size: 20px;
@@ -120,7 +120,9 @@ main {
   border-radius: 8px;
   cursor: pointer;
   transition: .3s all ease-in-out;
+  margin:20px auto;
 }
+
 .scene a:hover {
   background: #117B71;
 }
@@ -139,7 +141,9 @@ main {
 
 .scene .icon {
   margin-bottom: 24px;
+  text-align:center;
 }
+
 
 .scene .icon i {
   height: 120px;
@@ -158,7 +162,18 @@ main {
   font-size: 36px;
   color: #000000;
   text-align: center;
+  margin-left:auto;
+  margin-right:auto;
 }
+
+.scene h3 {
+  width: 540px;
+  margin-bottom: 10px;
+  font-family: 'Lobster', cursive;
+  font-size: 28px;
+  color: #000000;
+}
+
 
 .scene p {
   width: 540px;
@@ -166,6 +181,18 @@ main {
   font-size: 16px;
   line-height: 28px;
   text-align: center;
+}
+
+.scene p2 {
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom:20px;
+}
+
+.scene p3 {
+  font-size: 16px
+  line-height: 28px
+  padding:2px 10px;
 }
 
 .scene .small {
@@ -182,6 +209,71 @@ main {
   width: 640px;
   height: 200px;
   margin-bottom: 24px;
+  margin-left:auto;
+  margin-right:auto;
+}
+.explanationline{
+  display:inline-block
+}
+
+.self-explanation {
+  display: inline-block;
+  width: 700px;
+  height: 60px;
+  border-radius:8px;
+  border: 2px solid #26A69A;
+  box-sizing: border-box;
+  margin-top:12px;
+  margin-bottom:8px;
+  padding-left:14px;
+  padding-top:12px;
+  background: #FFFBF0;
+}
+
+.kc {
+  display: block;
+  width: 700px;
+  height: 60px;
+  border-radius:8px;
+  border: 2px solid #26A69A;
+  box-sizing: border-box;
+  margin-top:12px;
+  margin-bottom:8px;
+  margin-left:auto;
+  margin-right:auto;
+  padding-left:14px;
+  padding-top:15px;
+  background: #FFFBF0;
+  text-align:center;
+}
+
+.kcexplain {
+  display: block;
+  width: 800px;
+  height: 100px;
+  border-radius:8px;
+  border: 3px solid #26A69A;
+  box-sizing: border-box;
+  margin-top:20px;
+  margin-bottom:8px;
+  margin-left:auto;
+  margin-right:auto;
+  padding-left:14px;
+  padding-top:15px;
+  background: #FFFBF0;
+}
+
+
+
+.scene .icon-play {
+  color:#C9C4B5;
+  font-size:40px;
+  display:inline-block;
+  margin-left:30px;
+  vertical-align:middle;
+}
+.scene .icon-play:hover {
+  color: #117B71;
 }
 
 .scene .gallery .frame {
@@ -244,6 +336,7 @@ main {
   border: 3px solid #26A69A;
   border-radius: 8px;
   outline: 0;
+  margin:0 auto;
 }
 
 .heating:after {
@@ -414,3 +507,33 @@ footer {
     transform: rotate(360deg);
   }
 }
+
+.videopiece {
+  height:700px;
+  margin-top:20px;
+}
+
+.icon-close {
+  color:#C9C4B5;
+  font-size:30px;
+  display:inline-block;
+  position:absolute;
+  left:850px;
+  top:20px;
+}
+
+.scene h4 {
+  font-family: 'Lobster', cursive;
+  font-size: 28px;
+  color: #000000;
+  position: absolute;
+  top:22px;
+}
+
+
+.scene .icon-close:hover {
+  color: #117B71;
+}
+
+
+
