--- a/css/style.css
+++ b/css/style.css
@@ -568,7 +568,12 @@ footer {
   top:22px;
 }
 
-
+#final-score {
+  color:#26A69A;
+  font-size: 50px;
+  margin-left:5px;
+  margin-right:5px;
+}
 /*.scene .icon-close:hover {
   color: #117B71;
 
