--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ main {
 
 .scene a.icon-play {
   color:#C9C4B5 ;
-  font-size:40px ;
+  font-size:18px ;
   display:inline-block ;
   margin-left:10px ;
   vertical-align:middle ;
@@ -279,10 +279,8 @@ main {
   width: 700px;
   height: 60px;
   border-radius:8px;
-  border: 2px solid #26A69A;
   box-sizing: border-box;
   margin-top:12px;
-  margin-bottom:8px;
   padding-left:14px;
   padding-top:12px;
   background: #FFFBF0;
@@ -290,16 +288,16 @@ main {
 
 .kc {
   display: block;
-  width: 700px;
+  width: 800px;
   height: 60px;
   border-radius:8px;
   border: 2px solid #26A69A;
   box-sizing: border-box;
   margin-top:12px;
-  margin-bottom:8px;
-  margin-left:auto;
-  margin-right:auto;
-  padding-left:14px;
+/*  margin-bottom:8px;
+*//*  margin-left:auto;
+  margin-right:auto;*/
+  padding-bottom:15px;
   padding-top:15px;
   background: #FFFBF0;
   text-align:center;
@@ -310,7 +308,7 @@ main {
   width: 800px;
   height: 100px;
   border-radius:8px;
-  border: 3px solid #26A69A;
+/*  border: 3px solid #26A69A;*/
   box-sizing: border-box;
   margin-top:20px;
   margin-bottom:8px;
@@ -326,8 +324,8 @@ main {
   width: 80%;
   height: 100%;
   margin: 0 12px;
-  /* border: 3px solid #26A69A; */
-  border-radius: 8px;
+/*   border: 3px solid #26A69A;
+*/  border-radius: 8px;
   box-sizing: border-box;
 }
 
@@ -352,6 +350,7 @@ main {
   margin: 0;
   padding: 6px;
   box-sizing: border-box;
+  color:black;
 }
 
 .scene .gallery .option p span {
@@ -581,13 +580,11 @@ footer {
 */
 
 .option-border-green{
-  border-color: green;
-  border-width: 10px;
-  border: 10px solid green;
+  border: 3px solid #26A69A;
 }
 .option-border-red{
   border-color: red;
-  border-width: 10px;
+  border-width: 3px;
 }
 
 #feedback-text{
@@ -599,3 +596,13 @@ footer {
   width: 700px;
 }
 
+button {
+  font-family: 'Merriweather', serif;
+  outline:none;
+  font-color: black;
+
+}
+
+.self-explanation.fa-font:before {
+    content: "";
+}
