--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ main {
   border-radius: 8px;
   cursor: pointer;
   transition: .3s all ease-in-out;
-  margin:10px auto;
+  margin:50px auto;
   text-decoration: none;
 }
 
@@ -173,7 +173,7 @@ main {
   background: #FAEFD0;
   position: absolute;
   left:840px;
-  top:-15px;
+  top:-42px;
 }
 .scene a.icon-close:hover{
   color: #117B71;
@@ -307,12 +307,13 @@ main {
   -webkit-align-items: center; /* Safari 7.0+ */
   display: flex;
   align-items: center;
+  margin-bottom:2px;
 }
 
 .self-explanation {
     display: inline-block;
     width: 700px;
-    height: 60px;
+    height: 68px;
     border-radius: 8px;
     box-sizing: border-box;
     margin-top: 6px;
@@ -328,8 +329,8 @@ main {
   width: 800px;
   height: 60px;
   border-radius:8px;
-  border: 2px solid #26A69A;
-  box-sizing: border-box;
+/*  border: 2px solid #26A69A;
+*/  box-sizing: border-box;
   margin-top:12px;
 /*  margin-bottom:8px;
 *//*  margin-left:auto;
@@ -337,8 +338,8 @@ main {
   padding-bottom:15px;
   padding-top:15px;
   background: #FFFBF0;
-  text-align:center;
-}
+/*  text-align:center;
+*/}
 
 .kcexplain {
   display: block;
@@ -364,6 +365,7 @@ main {
 /*   border: 3px solid #26A69A;
 */  border-radius: 8px;
   box-sizing: border-box;
+  text-align:center;
 }
 
 .scene .gallery .frame img {
@@ -669,7 +671,7 @@ button {
 .scene .btn-hintvideo{
   width: 80px;
   /*height: 60px;*/
-  /*margin:0 30px;*/
+  margin:0 30px;
   display: inline-block;
   /*position: absolute;*/
   margin-right: 0;
@@ -688,8 +690,8 @@ button {
 .textbox-and-hint{
   /*display: block;*/
   /*margin: 30px 0;*/
-  padding: 30px;
-  padding-bottom: 15px;
+/*  padding: 30px;
+*/  padding-bottom: 15px;
   display: -webkit-flex; /* Safari */
   -webkit-align-items: center; /* Safari 7.0+ */
   display: flex;
@@ -706,5 +708,46 @@ button {
 }
 
 
+#scene-start a {
+    width: 150px;
+    padding: 12px 18px;
+    display: block;
+    background: #26A69A;
+    color: #FFFFFF;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: .3s all ease-in-out;
+    margin: 50px auto;
+    text-decoration: none;
+}
+
+#scene-explain a.btn-continue{
+    width: 150px;
+    padding: 12px 18px;
+    display: block;
+    background: #26A69A;
+    color: #FFFFFF;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: .3s all ease-in-out;
+    margin: 20px auto;
+    text-decoration: none;
+}
+
+.kc input {
+  margin-left: 10px;
+  margin-right:10px;
+}
+
+
+.checkmark {
+  height: 30px;
+  width: 30px;
+  background-color: #eee;
+}
 
 
